[package]
name = "github-stats"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "github-stats"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
colored = "3.0"
chrono = { version = "0.4.41", features = ["serde"] }
crossterm = "0.29.0"
